--- a/src/styles/ui/menu.module.css
+++ b/src/styles/ui/menu.module.css
@@ -5,7 +5,7 @@
 
     overflow: hidden;
     z-index: 50;
-    width: calc(var(--space-sidebar) - var(--space-lg) + var(--space-lg));
+    width: calc(var(--space-sidebar) - var(--space-xl) + var(--space-lg));
     max-width: 100%;
     z-index: 50;
 
@@ -17,8 +17,8 @@
     min-height: 90px;
     transition: max-height 3s ease-in-out;
 
-    padding: 0 var(--space-lg);
-    padding-top: var(--space-lg);
+    padding: 0 var(--space-xl);
+    padding-top: var(--space-xl);
 }
 
 .menuContainer.expanded {
