--- a/src/styles/ui/category.module.css
+++ b/src/styles/ui/category.module.css
@@ -8,7 +8,7 @@
     display: inline-block;
     width: 8px;
     height: 8px;
-    border-radius: 50%;
+    border-radius: var(--radius-xl);
     margin-right: 4px;
 }
 
