--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -6,7 +6,7 @@
   --color-background-07: rgba(252, 252, 252, 0.7);
   --color-foreground: #171717;
   --color-text: #222;
-  --color-line: #ddd;
+  --color-line: rgba(10, 10, 10, 0.3);
 
   /* font variation settings*/
   --var-sm: "opsz" 20, "wght" 420;
@@ -22,6 +22,7 @@
   --space-2xl: 4rem;
   --space-3xl: 5rem;
   --space-sidebar: 352px;
+  --space-row: 0.7rem;
 
   /* Font sizes */
   --font-xxs: calc(10rem/ 16);
@@ -94,7 +95,7 @@
     --color-background: #0a0a0a;
     --color-background-07: rgba(10, 10, 10, 0.7);
     --color-foreground: #ededed;
-    --color-text: #ddd;
+    --color-line: rgba(252, 252, 252, 0.3);
   
     --shadow-xs: 0 1px 2px rgba(255, 255, 255, 0.05);
     --shadow-sm: 0 2px 4px rgba(255, 255, 255, 0.05);
