--- a/src/styles/ui/menu.module.css
+++ b/src/styles/ui/menu.module.css
@@ -1,11 +1,11 @@
 .menuContainer {
     position: fixed;
     top: 0;
-    left: 0;
+    right: 0;
 
     overflow: hidden;
     z-index: 50;
-    width: calc(var(--space-sidebar) - var(--space-xl) + var(--space-lg));
+    width: calc(var(--space-sidebar) - var(--space-xl) + var(--space-xl));
     max-width: 100%;
     z-index: 50;
 
@@ -17,7 +17,9 @@
     min-height: 90px;
     transition: max-height 3s ease-in-out;
 
-    padding: 0 var(--space-xl);
+    padding-bottom: 0;
+    padding-right: var(--space-xl);
+    padding-left: var(--space-lg);
     padding-top: var(--space-xl);
 }
 
