--- a/src/styles/ui/layout.module.css
+++ b/src/styles/ui/layout.module.css
@@ -2,22 +2,22 @@
   position: relative;
   display: grid;
   grid-template-columns: 1fr;
-  padding: var(--space-xl);
+  padding: var(--space-lg);
 }
 
 .withSidebar {
   position: relative;
   display: grid;
-  /* Render content 1st, sidebar 2nd */
-  grid-template-columns: auto var(--space-sidebar);
+  /* Render sidebar 1st, content 2nd */
+  grid-template-columns:  var(--space-sidebar) auto;
   column-gap: var(--space-lg);
-  padding: var(--space-xl);
+  padding: var(--space-lg);
 }
 
 .sidebar {
   position: sticky;
-  top: var(--space-xl);
-  height: calc(100vh - var(--space-xl) * 2);
+  top: var(--space-lg);
+  height: calc(100vh - var(--space-lg) * 2);
   display: flex;
   flex-direction: column;
   overflow-y: auto;
