--- a/src/styles/ui/menu.module.css
+++ b/src/styles/ui/menu.module.css
@@ -1,11 +1,11 @@
 .menuContainer {
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
 
     overflow: hidden;
     z-index: 50;
-    width: calc(var(--space-sidebar) - var(--space-xl) + var(--space-xl));
+    width: calc(var(--space-sidebar) - var(--space-lg) + var(--space-lg));
     max-width: 100%;
     z-index: 50;
 
@@ -18,9 +18,9 @@
     transition: max-height 3s ease-in-out;
 
     padding-bottom: 0;
-    padding-right: var(--space-xl);
+    padding-right: var(--space-lg);
     padding-left: var(--space-lg);
-    padding-top: var(--space-xl);
+    padding-top: var(--space-lg);
 }
 
 .menuContainer.expanded {
