--- a/src/styles/ui/category.module.css
+++ b/src/styles/ui/category.module.css
@@ -1,23 +1,24 @@
 .category {
     display: inline-flex;
     align-items: first baseline;
-    margin-right: 0.5rem;
+    margin-right: var(--space-sm);
+    margin-top: var(--space-sm);
 }
 
 .dot {
     display: inline-block;
     width: 8px;
     height: 8px;
-    margin-right: 4px;
+    margin-right: var(--space-xs);
     border-radius: 50%;
     flex-shrink: 0;
     min-width: 8px;
     min-height: 8px;
+    /* border: 1px solid rgba(var(--color-foreground-rgb), 0.05); */
 }
 
 .label {
     font-size: var(--font-sm);
-    color: var(--color-foreground);
-    opacity: .6;
+    color: rgba(var(--color-foreground-rgb), 0.6);
     font-variation-settings: var(--var-sm);
 }
