--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -5,6 +5,7 @@
   --color-background: #fcfcfc;
   --color-background-07: rgba(252, 252, 252, 0.7);
   --color-foreground: #171717;
+  --color-foreground-rgb: 23, 23, 23;
   --color-text: #222;
   --color-line: rgba(10, 10, 10, 0.2);
 
@@ -96,6 +97,7 @@
     --color-background: #0a0a0a;
     --color-background-07: rgba(10, 10, 10, 0.7);
     --color-foreground: #ededed;
+    --color-foreground-rgb: 237, 237, 237;
     --color-line: rgba(252, 252, 252, 0.2);
   
     --shadow-xs: 0 1px 2px rgba(255, 255, 255, 0.05);
