--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,7 +37,7 @@ hr {
 a {
   display: inline-flex;
   align-items: center;
-  gap: 2px;
+  gap: 1px;
   color: inherit;
   text-decoration: none;
   font-size: var(--font-sm);
@@ -53,8 +53,9 @@ a:hover {
 a::after {
   content: "";
   display: inline-block;
-  width: 16px;
-  height: 16px;
+  margin-top: 2px;
+  width: 14px;
+  height: 14px;
   background-color: currentColor;
   -webkit-mask-image: url("/arrow.svg");
   mask-image: url("/arrow.svg");
@@ -70,20 +71,32 @@ a:hover::after {
 }
 
 h3 {
-    font-variation-settings: "opsz" 22, "wght" 420;
+    font-variation-settings: "opsz" 22, "wght" 410;
+    font-size: var(--font-md);
 }
 
-h3 a {
+h2 {
+    font-variation-settings: "opsz" 26, "wght" 420;
+    font-size: var(--font-lg);
+}
+
+h1 {
+    font-variation-settings: var(--var-lg);
+    font-size: var(--font-xl);
+    line-height: 1.25;
+}
+
+h2 a {
     font-size: inherit;
     font-variation-settings: inherit;
     color: var(--color-foreground);
     text-decoration: inherit;
 }
 
-h3 a::after {
+h2 a::after {
   width: 20px;
   height: 20px;
-  margin-top: 2px;
+  margin-top: 7px;
 }
 
 @media (max-width: 1024px) {
