--- a/src/styles/ui/tag.module.css
+++ b/src/styles/ui/tag.module.css
@@ -1,13 +1,14 @@
 /* components/ui/tag.module.css */
 .tag {
     display: inline-block;
-    padding: var(--space-xxs) var(--space-sm);
-    margin: var(--space-xxs);
-    background-color: rgba(var(--brand-grey-rgb), 0.12);
+    padding: var(--space-3xs) var(--space-sm);
+    margin: var(--space-3xs);
+    /* background-color: rgba(var(--brand-grey-rgb), 0.12); */
     border-radius: var(--radius-xl);
     font-size: var(--font-xs);
     color: rgba(var(--color-foreground-rgb), 0.7);
     white-space: nowrap;
     font-variation-settings: var(--var-sm);
+    border: 1px solid var(--color-line);
   }
   
