--- a/src/styles/ui/category.module.css
+++ b/src/styles/ui/category.module.css
@@ -7,13 +7,13 @@
 
 .dot {
     display: inline-block;
-    width: 8px;
-    height: 8px;
-    margin-right: var(--space-sm);
+    width: 7px;
+    height: 7px;
+    margin-right: var(--space-xs);
     border-radius: 50%;
     flex-shrink: 0;
-    min-width: 8px;
-    min-height: 8px;
+    min-width: 7px;
+    min-height: 7px;
     /* border: 1px solid rgba(var(--color-foreground-rgb), 0.05); */
 }
 
