--- a/src/styles/ui/category.module.css
+++ b/src/styles/ui/category.module.css
@@ -7,18 +7,18 @@
 
 .dot {
     display: inline-block;
-    width: 7px;
-    height: 7px;
+    width: 9px;
+    height: 9px;
     margin-right: var(--space-xs);
     border-radius: 50%;
     flex-shrink: 0;
-    min-width: 7px;
-    min-height: 7px;
+    min-width: 9px;
+    min-height: 9px;
     /* border: 1px solid rgba(var(--color-foreground-rgb), 0.05); */
 }
 
 .label {
-    font-size: var(--font-sm);
-    color: rgba(var(--color-foreground-rgb), 0.7);
+    font-size: var(--font-xs);
+    color: rgba(var(--color-foreground-rgb), 0.8);
     font-variation-settings: var(--var-sm);
 }
