--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -10,6 +10,9 @@
     border-bottom: 1px solid var(--color-line);
 }
 
+.row4col:hover [data-description] {
+    display: block;
+  }
 
 .row2col {
     display: grid;
