change: temporary hides overlay button achive

--- a/src/styles/archive/archiveItem.module.css
+++ b/src/styles/archive/archiveItem.module.css
@@ -26,7 +26,7 @@
 .fullLinkOverlay {
     position: absolute;
     inset: 0;
-    z-index: 1;
+    z-index: 4;
 }
 
 .link {
@@ -90,6 +90,7 @@
 }
 
 .viewCircle {
+    display: none;
     position: absolute;
     top: 50%;
     left: 50%;
