--- a/src/styles/ui/tag.module.css
+++ b/src/styles/ui/tag.module.css
@@ -1,4 +1,3 @@
-/* components/ui/tag.module.css */
 .tag {
     display: inline-block;
     padding: var(--space-3xs) var(--space-sm);
@@ -6,9 +5,16 @@
     /* background-color: rgba(var(--brand-grey-rgb), 0.12); */
     border-radius: var(--radius-xl);
     font-size: var(--font-xs);
-    color: rgba(var(--color-foreground-rgb), 0.7);
+    color: rgba(var(--color-foreground-rgb), 0.8);
     white-space: nowrap;
     font-variation-settings: var(--var-sm);
     border: 1px solid var(--color-line);
-  }
-  
+}
+
+.tag:hover {
+    border: 0px;
+    color: rgba(var(--color-foreground-rgb), 1);
+    padding: calc(var(--space-3xs) + 1px) calc(var(--space-sm) + 1px);
+    background-color: rgba(var(--brand-grey-rgb), 0.2);
+    cursor: pointer;
+}
