change: font variation settings for small medium size

--- a/src/styles/about/clock.module.css
+++ b/src/styles/about/clock.module.css
@@ -20,8 +20,7 @@
 
 .location {
     font-size: var(--font-xs);
-    font-variation-settings: var(--var-sm);
-    font-variation-settings: "opsz" 21, "wght" 520;
+    font-variation-settings: var(--var-sm),  "wght" 520;
     color: var(--color-foreground);
 }
 
