--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -41,12 +41,12 @@ a {
 
 
 h3 {
-    font-variation-settings: "opsz" 20, "wght" 440;
+    font-variation-settings: var(--var-sm), "wght" 500;
     font-size: var(--font-md);
 }
 
 h2 {
-    font-variation-settings: "opsz" 24, "wght" 440;
+    font-variation-settings: var(--var-lg), "wght" 440;
     font-size: var(--font-lg);
 }
 
