--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -3,10 +3,11 @@
     display: grid;
     grid-template-columns:
         minmax(50px, 0.25fr) minmax(200px, 2fr) minmax(100px, 0.85fr) minmax(60px, 0.2fr);
-    align-items: baseline;
+    align-items: center; /* baseline */
     padding: var(--space-row);
     border-bottom: 1px solid var(--color-line);
 }
+
 
 .row4col[data-archive-row]:hover {
     background-color: var(--color-background);
@@ -17,7 +18,8 @@
     padding: calc(var(--space-row) + 1px) var(--space-row);
 }
 
-.row4col[data-archive-row]:hover::before {
+
+.row4col[data-archive-row]::before {
     content: "";
     position: absolute;
     top: 0;
@@ -26,10 +28,19 @@
     bottom: -1px;
 
     background-color: rgba(var(--brand-grey-rgb), 0.08);
-    border-radius: var(--radius-md);
+    border-radius: var(--radius-sm);
 
     z-index: 0;
+
+    opacity: 0; 
+    transition: opacity 0.5s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
+
+
+.row4col[data-archive-row]:hover::before {
+    opacity: 1;
+}
+
 
 .row4col:hover [data-image],
 .row4col:hover [data-description] {
