--- a/src/styles/ui/menu.module.css
+++ b/src/styles/ui/menu.module.css
@@ -9,9 +9,10 @@
     max-width: 100%;
     z-index: 50;
 
-    background: linear-gradient(var(--color-background) 45%,
-            var(--color-background-07) 75%,
-            transparent 100%);
+    background: linear-gradient(
+        var(--color-background) 45%,
+        rgb(var(--color-background-rgb), 0.8) 75%,
+        transparent 100%);
 
     max-height: 100px;
     min-height: 90px;
