feat: implements a preliminary desktop view layout and routing

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -37,6 +37,7 @@
   --font-2xl:calc(45rem/ 16);
 
   /* Border Radius */
+  --radius-xs: 4px;
   --radius-sm: 8px;
   --radius-md: 12px;
   --radius-lg: 18px;
