feat: adds bidirectional URL synchronisation for correct restore after reload, and proper cleanup on close

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,6 +74,11 @@ h2 a::after {
     margin-top: 4px;
 }
 
+.invisible { 
+    visibility: hidden; 
+}
+
+
 @media (max-width: 1024px) {}
 
 @media (max-width: 768px) {
