--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,7 +27,7 @@ body {
 
 p {
     font-size: var(--font-sm);
-    font-variation-settings: var(--var-sm);
+    /*font-variation-settings: var(--var-sm);*/
 }
 
 hr {
@@ -40,23 +40,30 @@ a {
     text-decoration: none;
 }
 
+ul li { font-size: var(--font-sm) } 
+
+
+:where(b,strong){font-weight:500;} 
+
+h4,h3,h2,h1 {
+    font-size: var(--font-sm);
+    line-height: 1.3;
+    font-weight:500;
+}
 
 h3 {
-    font-variation-settings: var(--var-lg);
     font-size: var(--font-md);
 }
 
 h2 {
     letter-spacing: -0.02em;
     font-optical-sizing: none;
-    font-variation-settings: var(--var-lg);
     font-size: var(--font-lg);
 }
 
 h1 {
     letter-spacing: -0.02em;
     font-optical-sizing: none;
-    font-variation-settings: var(--var-lg);
     font-size: var(--font-xl);
     line-height: 1.3;
 }
@@ -79,6 +86,7 @@ h2 a::after {
 }
 
 
+
 @media (max-width: 1024px) {}
 
 @media (max-width: 768px) {
@@ -86,7 +94,8 @@ h2 a::after {
         font-size: var(--font-lg);
     }
 
-}
+}  /* or whatever your body size is */
+
 
 /*
 @media (prefers-color-scheme: dark) {
