--- a/src/styles/ui/category.module.css
+++ b/src/styles/ui/category.module.css
@@ -1,21 +1,21 @@
 .category {
-    display: inline-flex;
-    align-items: first baseline;
-    margin-right: var(--space-sm);
-    margin-top: var(--space-sm);
+    display: inline;
+    align-items: baseline;
+    float: right;
 }
 
 .dot {
     display: inline-block;
-    width: 9px;
-    height: 9px;
-    margin-right: var(--space-xs);
+    width: 8px;
+    height: 8px;
+    margin-left: -2px;
     border-radius: 50%;
     flex-shrink: 0;
-    min-width: 9px;
-    min-height: 9px;
-    /* border: 1px solid rgba(var(--color-foreground-rgb), 0.05); */
+    min-width: 8px;
+    min-height: 8px;
+    border: 1px solid var(--color-background);
 }
+
 
 .label {
     font-size: var(--font-xs);
