--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,8 +45,7 @@ ul li { font-size: var(--font-sm) }
 
 :where(b,strong){font-weight:500;} 
 
-h4,h3,h2,h1 {
-    font-size: var(--font-sm);
+h5,h4,h3,h2,h1 {
     line-height: 1.3;
     font-weight:500;
 }
